--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@syncfusion/ej2-react-charts": "^21.2.6",
     "axios": "^1.4.0",
+    "chart.js": "^4.3.0",
     "dotenv": "^16.0.3",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
