--- a/package.json
+++ b/package.json
@@ -11,18 +11,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@syncfusion/ej2-react-charts": "^21.2.6",
     "axios": "^1.4.0",
+    "chart.js": "^4.3.0",
     "dotenv": "^16.0.3",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
     "@types/node": "^20.2.5",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-modal": "^3.16.0",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react": "^4.0.0",
